<resources>
    <string name="app_name">PassportAssignment</string>
    <string name="filter">Filter</string>
    <string name="remove">Clear Filter</string>
    <string name="sort">Sort</string>
    <string name="clear_sort">Clear Sort</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="by_name_des">By Name Descending</string>
    <string name="by_name_asc">By Name Ascending</string>
    <string name="by_age_des">By Age Descending</string>
    <string name="by_age_asc">By Age Ascending</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="text_view_name">Name</string>
    <string name="text_view_age">Age</string>
    <string name="dbnode_profiles">profiles</string>
    <string name="dbnode_users">users</string>
    <string name="text_view_gender">Gender</string>
    <string name="profile_name">name</string>
    <string name="profile_gender">gender</string>
    <string name="profile_age">age</string>
    <string name="profile_hobbies">hobbies</string>
    <string name="profile_id">id</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_profile_view">ProfileViewActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_from_memory">Choose photo from memory</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="profile_images">images</string>
    <string name="empty_list">No data available</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was a connectivity error/unknown error, please try again later!</string>
    <string name="error_ok_button_text">OK</string>
    <string name="profile_delete_title">Are you sure you want to delete?</string>
    <string name="profile_delete_message">Press OK to continue, otherwise Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hobbies">Hobbies</string>
    <string name="text_view_age_number">99</string>
    <string name="submit">Submit</string>
    <string name="choose_image">Choose Image</string>
</resources>
